Fix whitespace in multiline code blocks

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,6 +9,9 @@
 code {
   white-space: nowrap;
 }
+pre code {
+  white-space: inherit;
+}
 
 /********************** My permanent custom modifications *********************/
 
